# icra

./: .gitignore  CMakeLists.txt  README.md  conda_cam_requirements.txt  install.sh  package.xml  requirements.txt  setup_env.sh  test_node.sh
config/: risk_map_rviz.rviz  turtlebot3_lds_2d.lua
launch/: cartographer.launch.py  map_saver.launch.py  occupancy_grid.launch.py  risk_system.launch.py
maps/: office.yaml
risk_nav/: __init__.py
rviz/: config.rviz
src/: backup_topic_yolo_blip2_risk.py  camera_rgb_saver.py  process_image.py  risk_mapping  risk_mapping.py  topic_gsam2.py  topic_yolo_blip2_lidar_risk  topic_yolo_blip2_lidar_risk.py  topic_yolo_blip2_risk.py
src/sample/: blip2.py  esam.py  gsam2.py  risk_gsam2.py
src/sample/dog_outputs/: dog_analysis_results.json
src/sample/outputs/: office_analysis_results.json  realtime_risk_assessment_1752653131.json
usd/: office.usd
